# StudyGuardian

./: .gitignore  DEPLOY_DESIGN.md  README.md  requirements.txt
agent/: __init__.py  calibrate_posture.py  main.py  posture_service.py  storage.py  test_posture_live.py
agent/capture/: __init__.py  ingest.py
agent/posture/: __init__.py  analyze.py
agent/recognition/: __init__.py  face.py
agent/sensors/: __init__.py  buzzer.py  dht.py  pir.py
agent/storage/: __init__.py  postgres.py  retention.py
backend/: Cargo.toml  README.md
backend/src/: main.rs
config/: settings.yaml  settings.yaml.example
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: build.sh  calibrate_posture.py  calibrate_posture.sh  deploy.sh  issue_ssl_cert.sh  setup_mqtt.sh  setup_nginx.sh  setup_postgres.sh  start_agent.sh  start_sensors.sh  test_posture_live.sh
sensors/: __init__.py  main.py
sensors/pir/: __init__.py  pir.py
src/: camera_ingest.py
